--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -1,24 +1,93 @@
-.Users{
+.UsersMain {
     width: 50%;
     height: 100vh;
-    background-color: rgba(251, 0, 0, 0.636);
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgba(255, 255, 255, 0.636);
+    gap: 20px;
+    border: 1px solid rgba(238, 238, 238, 1)
 }
-.Chats{
+
+.allUsers {
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 255, 0.515);
-    padding: 20px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
-.Chat{
+
+.User {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 30px;
+    background-color: rgb(255, 255, 255);
+    padding: 15px;
+    cursor: pointer;
+    transition: background-color 0.4s ease;
+}
+
+.User:hover {
+    transition: background-color 0.4s ease;
+    background: rgba(238, 238, 238, 1);
+
+}
+
+.userImg {
+    width: 60px;
+    height: 55px;
+}
+
+.userImg img {
+    width: 100%;
+    height: 100%;
+}
+
+.userTitle {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content:flex-end;
+    justify-content: center;    
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.userName {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.85);
+}
+
+.userMessangeUi {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.45);
+
+}
+
+
+.Chats {
+    width: 100%;
+    height: 100vh;
+}
+
+.Chat {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
 }
-.Messages{
+
+.Messages {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,32 +99,66 @@
     gap: 10px;
     overflow-y: scroll;
 }
-.UserOne{
+
+.UserOne {
     width: 100%;
-    text-align:  right;
+    text-align: right;
 }
-.UserTow{
+
+.UserTow {
     width: 100%;
     text-align: left;
 }
-.MessangeTow{
+
+.MessangeTow {
     width: auto;
     background-color: rgba(151, 230, 71, 0.781);
     padding: 10px;
 
 }
-.MessangeOne{
+
+.MessangeOne {
     background-color: rgb(70, 131, 8);
     padding: 10px;
 
 }
-.UserPostMessage{
+
+.UserPostMessage {
     width: 100%;
     height: 10%;
     background-color: rgb(25, 59, 89);
 }
-.HeaderChat{
+
+.HeaderChat {
     width: 100%;
     height: 10%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(238, 238, 238, 1);
+
+}
+.usersSerach{
+    width: 100%;
+    height: auto;
+    border: 1px solid rgba(238, 238, 238, 1);
+    padding: 20px;    
+    border-radius: 10px;
+}
+.SearchUser {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    width: 100%;
+}
+
+.serachuserTitle {
+    font-size: 27px;
+    font-weight: 700;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 1);
+}
+
+.search {
+    width: 100%;
 }
