--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -52,7 +52,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;    
+    justify-content: center;
     align-items: flex-start;
     gap: 10px;
 }
@@ -112,37 +112,72 @@
 
 .MessangeTow {
     width: auto;
-    background-color: rgba(151, 230, 71, 0.781);
-    padding: 10px;
+    background-color: rgba(3, 78, 116, 0.147);
+    padding: 13px 10px;
+    border-radius: 10px 10px 10px 0px;
+    color: rgb(6, 6, 6);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 17px;
 
 }
 
 .MessangeOne {
-    background-color: rgb(70, 131, 8);
-    padding: 10px;
+    color: rgb(9, 9, 9);
+    background-color: rgba(8, 173, 255, 0.145);
+    padding: 13px 10px;
+    border-radius: 10px 10px 0px 10px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 17px;
 
 }
 
 .UserPostMessage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
     width: 100%;
     height: 10%;
-    background-color: rgb(25, 59, 89);
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(238, 238, 238, 1)
 }
-
+.userPostMessange__file{
+    font-size: 25px;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
 .HeaderChat {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+    padding-left: 30px;
     width: 100%;
     height: 10%;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgba(238, 238, 238, 1);
 
 }
-.usersSerach{
+
+.userSet {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: rgba(39, 174, 96, 1);
+}
+
+.usersSerach {
     width: 100%;
     height: auto;
     border: 1px solid rgba(238, 238, 238, 1);
-    padding: 20px;    
+    padding: 20px;
     border-radius: 10px;
 }
+
 .SearchUser {
     display: flex;
     flex-direction: column;
